fixed image-border-flickering

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -193,7 +193,6 @@ section
     .img-inner-wrap
         display: block
         +border-radius($radius)
-        border: 1px solid $border-color
     a
         padding: 1em
         +border-radius($radius)
